# Technical_Backup

./: LICENSE  README.md
capacitor/: .gitignore  README.md  capacitor.config.js  capacitor.config.ts  package.json
capacitor-cypress/: README.md  package.json
cypress/: README.md  cypress.config.ts  package.json
docker/: README.md  package.json
electron/: README.md  electron.eslintrc.js  package.json
electron-playwright/: .eslintrc.js  README.md  package.json  tsconfig.json
ffcreator/: README.md  package.json
rust/: .gitignore  Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
rust/src/action/: mod.rs
rust/src/action/buy_phone/: buy_phone.rs  jerry_buy_phone.rs  mod.rs  tom_buy_phone.rs
rust/src/action/eat_food/: eat_apple.rs  mod.rs  tom_eat_apple.rs
rust/src/action/json_example/: mod.rs  user_json.rs
rust/src/action/pagination/: mod.rs  pagination.rs
rust/src/action/print_global_username/: mod.rs  print_username.rs
rust/src/action/show_animal/: mod.rs  print_all_animal.rs
rust/src/constant/: global_user_constant.rs  mod.rs
rust/src/enumable/: animal_enum.rs  global_user_enum.rs  mod.rs  phone_enum.rs  phone_trait_example.rs
rust/src/enums/: animal_enum.rs  mod.rs  phone_enum.rs
rust/src/model/: iphone_model.rs  mod.rs  pagination_model.rs  phone_trait.rs  pixel_model.rs  user_model.rs
rust/src/service/: mod.rs
rust/src/service/phone_service/: iphone_service.rs  mod.rs  phone_service.rs  pixel_service.rs
rust/src/traits/: mod.rs
rust/src/traits/phone/: iphone_trait.rs  mod.rs  phone_trait.rs  pixel_trait.rs
(+1351 files in other folders)
