[package]
name = "my"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.138"
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-recursion = "1.0.5"
strum = "0.27.1"
strum_macros = "0.27.1"
async-trait = "0.1"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true
